--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "lldb",
             "request": "launch",
             "program": "${workspaceRoot}/target/debug/rpx86.exe",
-            "args": ["${workspaceRoot}/bin/helloworld/helloworld.bin"],
+            "args": ["${workspaceRoot}/bin/arg-test/test.bin"],
             "cwd": "${workspaceRoot}",
         }
     ]
